--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,11 @@
     </style>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" tools:ignore="NewApi">
-        <item name="android:statusBarColor" >@android:color/transparent</item>
+        <item name="android:statusBarColor" >@color/colorPrimary</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowIsTranslucent">true</item>
     </style>
 
 </resources>
